[package]
name = "lrn-spl"
description = "Following the tutorial at http://blog.chain.link/how-to-build-and-deploy-a-solana-smart-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.10.35"

[dev-dependencies]
solana-program-test = "~1.10.35"
solana-sdk = "~1.10.35"

[lib]
name = "lrnspl"
crate-type = ["lib", "cdylib"]
